--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -129,7 +129,7 @@ for tool in llvmbintools:
                         tool)
   config.substitutions.append((tool, substitution))
 
-binutilsbintools = [r"\bobjdump\b",]
+binutilsbintools = [r"\ble32-nacl-objdump\b",]
 
 for tool in binutilsbintools:
   # The re.sub() line is adapted from one of LLVM's lit.cfg files.
