Revert "Adjust Subzero CMAKE=1 build to also use libc++ (like autoconf)."
This reverts commit d8fb3d33f38258b7fb177bd4cb420fab2e0c2c3a.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4138

Review URL: https://codereview.chromium.org/1091123002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -20,9 +20,11 @@ LLVM_SRC_PATH ?= ../llvm
 ifdef CMAKE
   # LLVM cmake build
   LLVM_BIN_PATH ?= ../../out/llvm_x86_64_linux_work/bin
+  STDLIB_FLAGS =
 else
   # LLVM autoconf build
   LLVM_BIN_PATH ?= ../../out/llvm_x86_64_linux_work/Release+Asserts/bin
+  STDLIB_FLAGS = -stdlib=libc++ -I$(LIBCXX_INSTALL_PATH)/include/c++/v1
 endif
 
 # The x86-32-specific sandboxed translator directory.
@@ -51,7 +53,6 @@ CLANG_PATH ?= $(shell readlink -e \
 # contain header files and corresponding libraries. This is used for
 # building the host binaries in conjuction with clang.
 LIBCXX_INSTALL_PATH ?= $(PNACL_TOOLCHAIN_ROOT)
-STDLIB_FLAGS := -stdlib=libc++ -I$(LIBCXX_INSTALL_PATH)/include/c++/v1
 
 HOST_ARCH ?= x86_64
 ifeq ($(HOST_ARCH),x86_64)
