--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -62,12 +62,9 @@ config.substitutions.append(('%{python}', sys.executable))
 
 pydir = os.path.join(bin_root, 'pydir')
 
-# Finding LLVM binary tools. Tools used in the tests must be listed in
-# the llvmbintools list or binutilsbintools.
-llvmbinpath = os.path.abspath(os.environ.get('LLVM_BIN_PATH'))
-
-# Find binutils tools. This is used for objdump.
-binutilsbinpath = os.path.abspath(os.environ.get('BINUTILS_BIN_PATH'))
+# Finding PNaCl binary tools. Tools used in the tests must be listed in the
+# pnaclbintools list.
+pnaclbinpath = os.path.abspath(os.environ.get('PNACL_BIN_PATH'))
 
 # Define the location of the pnacl-sz tool.
 pnacl_sz_tool = os.path.join(bin_root, 'pnacl-sz')
@@ -91,8 +88,7 @@ iflc2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir_as_input'
 # Base command for running pnacl-sz
 pnacl_sz_cmd = [os.path.join(pydir, 'run-pnacl-sz.py'),
                 '--pnacl-sz', pnacl_sz_tool,
-                '--llvm-bin-path', llvmbinpath,
-                '--binutils-bin-path', binutilsbinpath]
+                '--pnacl-bin-path', pnaclbinpath]
 
 # Run commands only if corresponding build attributes apply, including
 # for each compiler setup.
@@ -110,32 +106,23 @@ config.substitutions.append(('%lc2i', ' '.join(iflc2i_atts_cmd + pnacl_sz_cmd
 
 config.substitutions.append(('%pnacl_sz', pnacl_sz_tool))
 
-llvmbintools = [r"\bFileCheck\b",
-                r"\bllvm-as\b",
-                r"\bllvm-mc\b",
-                r"\bllvm-readobj\b",
-                r"\bnot\b",
-                r"\bpnacl-freeze\b",
-                r"\bpnacl-bcdis\b"]
+pnaclbintools = [r"\bFileCheck\b",
+                 r"\ble32-nacl-objdump\b",
+                 r"\bllvm-as\b",
+                 r"\bllvm-mc\b",
+                 r"\bllvm-readobj\b",
+                 r"\bnot\b",
+                 r"\bpnacl-freeze\b",
+                 r"\bpnacl-bcdis\b"]
 
-for tool in llvmbintools:
+for tool in pnaclbintools:
   # The re.sub() line is adapted from one of LLVM's lit.cfg files.
   # Extract the tool name from the pattern.  This relies on the tool
   # name being surrounded by \b word match operators.  If the
   # pattern starts with "| ", include it in the string to be
   # substituted.
   substitution = re.sub(r"^(\\)?((\| )?)\W+b([0-9A-Za-z-_]+)\\b\W*$",
-                        r"\2" + llvmbinpath + "/" + r"\4",
-                        tool)
-  config.substitutions.append((tool, substitution))
-
-binutilsbintools = [r"\ble32-nacl-objdump\b",]
-
-for tool in binutilsbintools:
-  # The re.sub() line is adapted from one of LLVM's lit.cfg files.
-  # Similar to the llvmbintools.
-  substitution = re.sub(r"^(\\)?((\| )?)\W+b([0-9A-Za-z-_]+)\\b\W*$",
-                        r"\2" + binutilsbinpath + "/" + r"\4",
+                        r"\2" + pnaclbinpath + "/" + r"\4",
                         tool)
   config.substitutions.append((tool, substitution))
 
@@ -148,6 +135,5 @@ def dbg(s):
   print '[DBG] %s' % s
 
 dbg('bin_root = %s' % bin_root)
-dbg('llvmbinpath = %s' % llvmbinpath)
-dbg('binutilsbinpath = %s' % binutilsbinpath)
+dbg('pnaclbinpath = %s' % pnaclbinpath)
 dbg("Build attributes = %s" % pnacl_sz_atts)
