Clean up unit munging unit tests using common NaCl API.
Simplify the munging unit tests to follow the new NaCl utilities
for munging tests.

Note that this CL takes advantage of changes added by
CL https://codereview.chromium.org/1140153004

BUG=None
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1149423011

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -259,6 +259,7 @@ $(UNITTEST_OBJS): $(OBJDIR)/unittest/%.o: unittest/%.cpp \
 	$(CXX) -c $(CXXFLAGS) \
 		-Isrc/ \
 		-I$(LLVM_SRC_PATH)/utils/unittest/googletest/include \
+		-I$(LLVM_SRC_PATH) \
 		-DGTEST_HAS_RTTI=0 -DGTEST_USE_OWN_TR1_TUPLE \
 		$< -o $@
 
