First patch for Mips subzero compiler
BUG= https://code.google.com/p/nativeclient/issues/detail?id=4167

Move issue https://codereview.chromium.org/1159823004/ here so that
it's under the proper email.

Review URL: https://codereview.chromium.org/1169533003

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -187,6 +187,7 @@ SRCS = \
 	IceTargetLowering.cpp \
 	IceTargetLoweringARM32.cpp \
 	IceTargetLoweringX8632.cpp \
+	IceTargetLoweringMIPS32.cpp \
 	IceThreading.cpp \
 	IceTimerTree.cpp \
 	IceTranslator.cpp \
