--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -278,7 +278,8 @@ $(OBJDIR)/unittest: $(OBJDIR)
 	@mkdir -p $@
 
 RT_SRC := runtime/szrt.c runtime/szrt_ll.ll runtime/szrt_profiler.c
-RT_OBJ := build/runtime/szrt_native_x8632.o build/runtime/szrt_sb_x8632.o
+RT_OBJ := build/runtime/szrt_native_x8632.o build/runtime/szrt_sb_x8632.o \
+	build/runtime/szrt_native_arm32.o build/runtime/szrt_sb_arm32.o
 
 runtime: $(RT_OBJ)
 
